# kie-cli

./: .gitignore  SPEC.md  pyproject.toml
data/: pricing-snapshot.json
research/: kie-research.json
src/kie_cli/: __main__.py  api.py  cli.py  dummy_ref.py  ledger.py  pricing.py  registry.py
src/kie_cli/data/: pricing-snapshot.json
tests/: conftest.py  test_api.py  test_cli.py  test_dummy_ref.py  test_ledger.py  test_pricing.py  test_registry.py
