[project]
name = "kie-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx"]

[project.scripts]
kie = "kie_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kie_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/kie_cli/data" = "kie_cli/data"

[tool.pytest.ini_options]
pythonpath = ["src"]
